// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skip Link Default renders correctly 1`] = `
<jest>
  <a
    class="ecl-skip-link"
    href="#top"
  >
    Skip to main content
  </a>
</jest>
`;

exports[`Skip Link Default renders correctly with extra attributes 1`] = `
<jest>
  <a
    class="ecl-skip-link"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="#top"
  >
    Skip to main content
  </a>
</jest>
`;

exports[`Skip Link Default renders correctly with extra class names 1`] = `
<jest>
  <a
    class="ecl-skip-link custom-class custom-class--test"
    href="#top"
  >
    Skip to main content
  </a>
</jest>
`;
